Added endpoints for filtering books