@@ -1,13 +1,19 @@
 package com.example.bookstore.service;
 
+import com.example.bookstore.model.dto.AuthorDTO;
 import com.example.bookstore.model.dto.BookHeaderDTO;
+import com.example.bookstore.model.entities.BookHeader;
+import com.example.bookstore.model.entities.Category;
 import com.example.bookstore.repository.AuthorRepository;
 import com.example.bookstore.repository.BookHeaderRepository;
+import com.example.bookstore.repository.CategoryRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -17,7 +23,14 @@ public class BookService {
 
     BookHeaderRepository bookHeaderRepository;
     AuthorRepository authorRepository;
+
+    CategoryRepository categoryRepository;
     ModelMapper modelMapper;
+
+    @Autowired
+    public void setCategoryRepository(CategoryRepository categoryRepository) {
+        this.categoryRepository = categoryRepository;
+    }
 
     @Autowired
     public void setModelMapper(ModelMapper modelMapper) {
@@ -36,25 +49,39 @@ public class BookService {
 
     public List<BookHeaderDTO> searchBooksByTitle(String bookTitle, Integer page) {
         return bookHeaderRepository
-                .findByBookTitleLikeIgnoreCaseAndQuantityGreaterThan(
+                .findByBookTitleLikeIgnoreCase(
                         "%" + bookTitle + "%",
-                        0,
-                        PageRequest.of(--page, 2)
+                        PageRequest.of(--page, 20)
                 )
                 .stream()
                 .map(bookHeader -> modelMapper.map(bookHeader, BookHeaderDTO.class))
                 .collect(Collectors.toList());
     }
 
-    public List<BookHeaderDTO> getHomepageBooks(Integer page) {
+    public List<BookHeaderDTO> searchBooksByAuthor(String authorName, String authorSurname, Integer page) {
+        throw new RuntimeException();
+    }
+
+    public List<BookHeaderDTO> getAllAvailableBooks(Integer page) {
         return bookHeaderRepository
                 .findByQuantityGreaterThan(
                         0,
-                        PageRequest.of(--page, 2)
+                        PageRequest.of(--page, 20)
                 )
                 .stream()
                 .map(bookHeader -> modelMapper.map(bookHeader, BookHeaderDTO.class))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    public List<BookHeaderDTO> searchBooksByTitleCategory(String title, String category, Integer page) {
+        return bookHeaderRepository
+                .findByBookTitleLikeIgnoreCaseAndBookCategories_Description(
+                        "%" + title + "%",
+                        category,
+                        PageRequest.of(--page, 20)
+                )
+                .stream()
+                .map(bookHeader -> modelMapper.map(bookHeader, BookHeaderDTO.class))
+                .toList();
+    }
 }
